# panda_cartesian_impedance

./: .gitignore  CMakeLists.txt  README.md  package.xml  panda_cartesian_impedance_plugin.xml
config/: cartesian_impedance_controllers.yaml
include/panda_cartesian_impedance/: cartesian_ik.h  cartesian_osc.h  cartesian_pd.h  dual_arm_cartesian_impedance_controller.h  inference_model.h  neural_commander.h  pseudo_inversion.h
launch/: aruco_multi_test.launch  aruco_test.launch  cartesian_ik_control.launch  cartesian_impedance_control.launch  cartesian_osc.launch  cartesian_pd_control.launch  dual_arm_handover.launch  dual_cartesian_impedance_control.launch  expert_pick_and_place.launch  launch_bimanual.launch  left_pick_and_place.launch  panda_realsense_eyeonbase.launch  panda_realsense_eyeonhand.launch  right_pick_and_place.launch  single_neural_policy.launch  test_controller_accuracy.launch  test_marker_track.launch  test_rl_observation.launch  tracking_system.launch  verify_calibration.launch
msg/: DualPoseStamped.msg
scripts/: aruco_track.py  debug_multi_marker_obs.py  dual_pose_commander.py  expert_pick_and_place.py  left_arm_publisher.py  mat_to_quat.py  neural_pick_and_place.py  obs_handover_publisher.py  obs_pixel_publisher.py  obs_publisher.py  pose_commander.py  process_handover_action.py  right_arm_publisher.py  test_controller_accuracy.py
scripts/shell/: left_arm.sh  right_arm.sh  two_arm_back.py
src/: README.md  cartesian_ik.cpp  cartesian_osc.cpp  cartesian_pd.cpp  dual_arm_cartesian_impedance_controller.cpp  inference_model.cpp  neural_commander.cpp
